# bora-runtime

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOld.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: cmakebuild.yaml  submodule_sender.yaml
assets/icon/: bora_osx.icns
assets/shaders/: backup.txt  logoshader.frag  logoshader.vert  rainbow.frag  rainbow.vert  test.vert  titlebar.frag  titlebar.vert  utshader.frag  utshader.vert  vertexShader.vert  whitefade.frag
cmake/: skia.cmake
cmake/platform/: linux.cmake  macos.cmake  windows.cmake
contribs/: DEVNOTICE.md
contribs/wasm-micro-runtime/core/: config.h
contribs/wasm-micro-runtime/core/iwasm/aot/: aot_loader.c  aot_runtime.c
contribs/wasm-micro-runtime/core/iwasm/common/: wasm_application.c  wasm_c_api.c  wasm_exec_env.c  wasm_exec_env.h  wasm_memory.c  wasm_memory.h  wasm_runtime_common.c  wasm_runtime_common.h
contribs/wasm-micro-runtime/core/iwasm/include/: wasm_export.h
contribs/wasm-micro-runtime/core/iwasm/interpreter/: wasm_interp_classic.c  wasm_interp_fast.c  wasm_runtime.c  wasm_runtime.h
contribs/wasm-micro-runtime/core/iwasm/libraries/debug-engine/: debug_engine.c  debug_engine.h
contribs/wasm-micro-runtime/core/iwasm/libraries/libc-builtin/: libc_builtin_wrapper.c
contribs/wasm-micro-runtime/core/iwasm/libraries/libc-wasi/: libc_wasi_wrapper.c
contribs/wasm-micro-runtime/core/iwasm/libraries/libc-wasi/sandboxed-system-primitives/src/: posix.h
contribs/wasm-micro-runtime/core/shared/platform/include/: platform_api_extension.h
contribs/wasm-micro-runtime/core/shared/platform/windows/: platform_internal.h  win_atomic.cpp  win_util.h
libs/Debug/: glew32sd.lib
libs/Release/x64/: glew32s.lib
src/: library.def  main.cpp  mainDynamicLibrary.cpp
src/host/: Commands.cpp  Commands.h  WasmTools.h  hostSymbols.cpp  hostSymbols.h
src/host/bora/: boraInputSymbols.cpp  boraInputSymbols.h  boraLoggingSymbols.cpp  boraLoggingSymbols.h  boraMemorySymbols.cpp  boraMemorySymbols.h  boraWindowSymbols.cpp  boraWindowSymbols.h
src/host/stl/: atomic.cpp  atomic.h  classTest.h  faults.h  string.cpp  string.h  thread.cpp  thread.h  wasi.h
src/host/templates/: hostSymbolRegister.cpp  hostSymbolRegister.h  hostSymbolTemplate.hpp
src/software/: WasmRunner.cpp  WasmRunner.h
src/software/common/: Data.h  PlatformInterfaces.h  SysImageMgr.cpp  SysImageMgr.h  Types.h  Utils.h  dr_mp3.h  window.cpp  window.h
src/software/common/nAudio/: AudioAbstractions.h  bnAudio.cpp  bnAudio.h  bnAudioCreator.h
src/software/common/nCommon/: CommandList.h  CommandListContainers.h  CommandRegistry.h  MemoryCommands.h  Resources.h
src/software/common/nGUI/: bnFontMgr.cpp  bnFontMgr.h
src/software/common/nGraphics/: GraphicsSystem.h  GraphicsUtilities.h  bnGraphics.cpp  bnGraphics.h  bnGraphics.tpp  bnGraphicsCreator.h  bnGraphicsOGL.h  bnGraphicsVK.cpp  bnGraphicsVK.h  graphAdvanced.cpp  graphAdvanced.h  graphSimple.cpp  graphSimple.h
src/software/common/nLogger/: bnLogger.cpp  bnLogger.h
src/software/common/nWindow/: bnMessageBox.cpp  bnMessageBox.h  bnUserWindow.cpp  bnUserWindow.h  bnWindow.cpp  bnWindow.h  bnWindowAbstracts.h  bnWindowTitlebar.cpp  bnWindowTitlebar.h  devBnLogoWindow.cpp  devBnLogoWindow.h
src/software/darwin/: MessageBox.h  MessageBox.mm
src/software/darwin/nGraphics/: MetalUtils.mm  bnGraphicsMTL.h  bnGraphicsMTL.mm  bnGraphicsOGL.h  bnGraphicsOGL.mm
src/software/darwin/nWindow/: darwinWindow.h  darwinWindow.mm  darwinWindowBridge.h  darwinWindowBridge.mm
src/software/win32/: Win32Logger.cpp  Win32Logger.h  rcscle.cc  rcscle.h
src/software/win32/nAudio/: bnAudioDeviceWin32.cpp  bnAudioDeviceWin32.h
src/software/win32/nGraphics/: D3DUtilities.h  D3dx12.h  bnGraphicsD3D11.cpp  bnGraphicsD3D11.h  bnGraphicsD3D12.cpp  bnGraphicsD3D12.h  bnGraphicsOGL.cpp  bnGraphicsOGL.h
src/software/win32/nWindow/: win32Window.cpp  win32Window.h
src/software/win32/winmeta/: DPI.manifest  bora.rc
src/wrapper/: VersionLoader.cpp  VersionLoader.h  mainWrapper.cpp
tests/: test_security_md.py
